# gpras

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  install_hec_ras.sh  pyproject.toml
.devcontainer/: devcontainer.json  ensure-env.sh
.github/: pull_request_template.md
.github/workflows/: README.md  ci.yaml  dev-push.yaml  docker-build.yaml  main-push.yaml  pr-checks.yaml  release.yaml
data/run_creation/: bridgeport.u01  bridgeport_2.stac.json  exported-precip_trinity.dss  run_maker_settings_HF.json
data/shared/: event_plans.json  project_area.gpkg
data_dir/gpr/gpr_1/: gpr_1.stac.json
data_dir/precip_data/: events.stac.json
data_dir/ras_models/ffrd/: ffrd.stac.json
data_dir/ras_models/hf/: BaldEagle.stac.json
docs/: data_directory.md  data_model.md
experiments/: load_and_vis_data.ipynb
gpras/: __init__.py  bad_code.py  consts.py  gpr.py  hms.py  metrics.py  preprocess.py  ras.py
gpras/ras/: flow.py  model.py  plan.py
gpras/ras/static/: plan_template.txt
gpras/utils/: bad_code.py  common.py  dummy_data.py  file_utils.py  plotting.py  preprocessing.py  ras.py  s3_utils.py  spatial_utils.py
production/: __init__.py  pipeline.py
production/analysis/: __init__.py  cross_validation.py  data_models.py  pipeline.py  pipeline_ave_depth.py  pipeline_fluvial.py  pipeline_pluvial.py  pipeline_pluvial_20250924.py  pipeline_v.py  pipeline_velocity.py
production/configurations/0.1.0/: bridgeport.stac.json  event_plans.json  gpr_training.config.json  run_maker_settings_LF.json
production/post_processing/: README.txt  plot_gpr_flood_maps.py  read_inflows.py
production/post_processing/GIS/masks/: fluvial_mask_gpr40_t55_0ft.dbf  fluvial_mask_gpr40_t55_0ft.shp  fluvial_mask_gpr40_t55_0ft.shx  gpr40_fluvial_surface_t55.dbf  gpr40_fluvial_surface_t55.shp  gpr40_fluvial_surface_t55.shx  pluvial_mask_gpr40_t55_0ft.dbf  pluvial_mask_gpr40_t55_0ft.shp  pluvial_mask_gpr40_t55_0ft.shx
production/pre_processing/: build_ras_runs.py  event_selection.py  get_sst_events.py  make_ras_runs.py  make_ras_stac.py  select_events.py
production/toy_data/: feature_visualization.ipynb
production/workflow/: gpr_setup_example.ipynb
tests/ras/: hdf_files.py
